--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@nut-tree/nut-js": "^1.7.0",
     "desktop-screenshot": "^0.1.1",
     "express": "^4.17.1",
+    "robotjs": "^0.6.0",
     "screenshot-desktop": "^1.12.7",
     "socket.io": "^4.3.2",
     "socket.io-client": "^4.3.2"
